--- a/AlgorithmsLabs/AlgorithmsLabs.csproj
+++ b/AlgorithmsLabs/AlgorithmsLabs.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=6.10.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\DatabaseController.cs" />
+    <Compile Include="Database\DatabaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Database\DatabaseForm.Designer.cs">
+      <DependentUpon>DatabaseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FindStringAlgorithms\BouerMoure.cs" />
     <Compile Include="FindStringAlgorithms\FindForm.cs">
       <SubType>Form</SubType>
@@ -53,7 +61,6 @@
     <Compile Include="FindStringAlgorithms\FindForm.designer.cs">
       <DependentUpon>FindForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main\UnitsKeeper.cs" />
     <Compile Include="MergingAlgorithms\MergeController.cs" />
     <Compile Include="MergingAlgorithms\MergeForm.cs">
       <SubType>Form</SubType>
@@ -78,6 +85,9 @@
     </Compile>
     <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Database\DatabaseForm.resx">
+      <DependentUpon>DatabaseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FindStringAlgorithms\FindForm.resx">
       <DependentUpon>FindForm.cs</DependentUpon>
     </EmbeddedResource>
